Allow more endpoints to use commentable_ids param
The commentable_ids param is a comma-delimited list of ids indicating
that only threads belonging to one of the specified commentables should
be returned. It can now be used by any endpoint that delegates to
handle_threads_query (most importantly "#{APIPREFIX}/threads"), and
the commentable_id field is now indexed for efficient filtering.

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,5 @@ Christina Roberts <christina@edx.org>
 Calen Pennington <calen.pennington@gmail.com>
 Ed Zarecor <ed@edx.org>
 Jay Zoldak <jzoldak@edx.org>
+Jim Abramson <jsa@edx.org>
+Greg Price <gprice@edx.org>
